# Coplt.Graphics

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  Coplt.Graphics.Native.natvis  Coplt.Graphics.sln  Coplt.Graphics.sln.DotSettings  README.md
.github/workflows/: build.yml
Coplt.Graphics/: Class1.cs  Coplt.Graphics.csproj  dotnet-tools.json  global.using.cs
Coplt.Graphics.Core/: Coplt.Graphics.Core.csproj  GenerateBinding.D3d12.rsp  GenerateBinding.rsp
Coplt.Graphics.Core/Core/: Barrier.cs  BindGroupLayout.cs  BindingLayout.cs  Blob.cs  BufferRange.cs  Color.cs  CommandList.cs  ComputeShaderPipeline.cs  DeviceChild.cs  DeviceRequires.cs  DsvClear.cs  FrameId.cs  GpuAdapter.cs  GpuBuffer.cs  GpuDevice.cs  GpuExecutor.cs  GpuImage.cs  GpuIsolate.cs  GpuObject.cs  GpuOutput.cs  GpuQueue.cs  GpuRecord.cs  GpuResource.cs  GpuView.cs  GpuViewable.cs  GraphicsFormat.cs  GraphicsInstance.cs  GraphicsShaderPipeline.cs  IQueueOwned.cs  ImagePlane.cs  ImageUploadBufferMemory.cs  LegacyState.cs  MeshLayout.cs  NativeObject.cs  PipelineState.cs  QueueConfig.cs  Rect.cs  ResState.cs  ResourceEnums.cs  ResourceState.cs  (+20 more)
Coplt.Graphics.Core/Native/: FBlob.cs  FChunked.cs  FList.cs  FResourceRef.cs  FShaderLayoutGroupClass.cs  FShaderLayoutItemDefine.cs  FSlice.cs  FUploadLoc.cs  INativeGuid.cs  Message.cs  Native.D3d12.cs  Native.cs  ResState.cs  Result.cs  Str8or16.cs
Coplt.Graphics.Core/Utils/: String.cs  Utils.cs
Coplt.Graphics.Native.D3d12/: Coplt.Graphics.Native.D3d12.csproj
Coplt.Graphics.Native.D3d12.Win64/: Coplt.Graphics.Native.D3d12.Win64.csproj
Coplt.Graphics.Native/Api/: CMakeLists.txt  Object.h
Coplt.Graphics.Native/Api/FFI/: Adapter.h  Binding.h  Blob.h  Chunked.h  Cmd.h  Command.h  Common.h  Context.h  Device.h  Executor.h  Features.h  GpuObject.h  GraphicsFormat.h  Instance.h  Isolate.h  Layout.h  List.h  Logger.h  Object.h  Output.h  Pipeline.h  PipelineState.h  Queue.h  Record.h  Resource.h  Result.h  Sampler.h  Shader.h  States.h  String.h  Structs.h  TextureFormat.h  Types.h  View.h
Coplt.Graphics.Native/Api/Include/: AllocObjectId.h  ChunkedVector.h  Concepts.h  Error.h  Finally.h  GpuObject.h  HashMap.h  InstanceBase.h  Logger.h  Memory.h  Object.h  ObjectKey.h  Option.h  Ptr.h  Uninit.h  Utils.h
Coplt.Graphics.Native/Api/Src/: AllocObjectId.cc  Allocator.cc  Allocator.h  Blob.cc  Error.cc  HashMap.cc  Object.cc  Shader.cc  Shader.h  String.cc  String.h
Coplt.Graphics.Native/D3d12/: CMakeLists.txt
Coplt.Graphics.Native/D3d12/FFI/: Adapter.h  Binding.h  Device.h  Instance.h  Isolate.h  Layout.h  Library.h  Output.h  Pipeline.h  Queue.h  Resource.h  Sampler.h
Coplt.Graphics.Native/D3d12/Include/: GraphicsFormat.h  PipelineState.h  ResState.h  Resource.h  Sampler.h  ShaderVisibility.h  States.h  TextureFormat.h  Utils.h  View.h
Coplt.Graphics.Native/D3d12/Src/: Adapter.cc  Adapter.h  Barrier.cc  Barrier.h  Binding.cc  Binding.h  Buffer.cc  Buffer.h  CmdListPack.h  Command.cc  Command.h  ComputePipeline.cc  ComputePipeline.h  Context.cc  Context.h  DescriptorManager.cc  DescriptorManager.h  Device.cc  Device.h  Executor.h  GraphicsPipeline.cc  GraphicsPipeline.h  Image.cc  Image.h  Instance.cc  Instance.h  Isolate.cc  Isolate.h  Layout.cc  Layout.h  Library.cc  Output.cc  Output.h  Pipeline.h  Queue.cc  Queue.h  Record.cc  Record.h  RecordStorage.cc  RecordStorage.h  (+9 more)
Coplt.Graphics/Core/: Allocator.cs  CommandList.cs  D3dFeatureLevel.cs  GpuDevice.cs  GpuOutput.cs  GpuPreference.cs  GpuQueue.cs  GpuQueueType.cs  GraphicsInstance.cs  GraphicsShaderPipeline.cs  MeshLayout.cs  PipelineState.cs  Rect.cs  ResourceState.cs  ShaderInputLayout.cs  ShaderLayout.cs  ShaderModule.cs  ShaderStage.cs  TextureFormat.cs  Views.cs  VulkanVersion.cs
Coplt.Graphics/Native/: Attrs.cs  Exception.cs  ExchangeUtils.cs  FList.cs  FResourceSrc.cs  Native.D3d12.cs  Native.cs  Result.cs  bool.cs
Coplt.Graphics/Utils/: String.cs  Utils.cs
ExampleBase/: ExampleBase.csproj  Utils.cs
Examples/Colorful/: Colorful.csproj  Colorful.md  Example.cs  MainWindow.xaml  MainWindow.xaml.cs
Examples/Colorful/Shaders/: Shader.hlsl
Examples/ExampleBase/: ExampleBase.cs  ExampleBase.csproj  Time.cs
Examples/HelloCube/: Example.cs  HelloCube.csproj
Examples/HelloCube/Properties/: launchSettings.json
Examples/HelloCube/Shaders/: HelloTriangle.hlsl
Examples/HelloTriangle/: App.xaml.cs  Example.cs  HelloTriangle.csproj  HelloTriangle.md  MainWindow.xaml  MainWindow.xaml.cs
Examples/HelloTriangle/Properties/: launchSettings.json
Examples/HelloTriangle/Shaders/: HelloTriangle.hlsl  Shader.hlsl
Examples/HelloTriangleVertex/: Example.cs  HelloTriangleVertex.csproj  HelloTriangleVertex.md
Examples/HelloTriangleVertex/Shaders/: Shader.hlsl
Examples/Image/: App.xaml.cs  Example.cs  Image.csproj  Image.md
Examples/Image/Shaders/: Shader.hlsl
Examples/Mipmap/: Example.cs  MainWindow.xaml.cs  Mipmap.csproj  Mipmap.md
Examples/Mipmap/Shaders/: Display.hlsl  Mipmap.hlsl  Shader.hlsl
Examples/RotatingCube/: Example.cs
Examples/RotatingCube/Shaders/: Shader.hlsl
Examples/SwapChain/: ExampleBase.cs  MainWindow.xaml.cs
Examples/SwapChain/Properties/: launchSettings.json
Test1/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Test1.csproj  Utils.cs
Test1/Properties/: launchSettings.json
