set(target_name "Coplt_Graphics_Native_Api")

add_library(${target_name} STATIC
    FFI/Common.h
    FFI/Object.h
    Include/Object.h
    Src/Object.cc
    FFI/String.h
    Src/String.cc
    Src/String.h
    FFI/Instance.h
    FFI/Types.h
    FFI/Device.h
    FFI/Result.h
    Include/Error.h
    FFI/Logger.h
    Include/Logger.h
    Include/InstanceBase.h
    Include/Error.h
    FFI/GpuObject.h
    FFI/Output.h
    FFI/Queue.h
    FFI/GraphicsFormat.h
    FFI/States.h
    Src/Allocator.cc
    Src/Allocator.h
    FFI/List.h
    FFI/Command.h
    FFI/Resource.h
    FFI/Shader.h
    Src/Shader.h
    Src/Shader.cc
    FFI/Pipeline.h
    FFI/PipelineState.h
    FFI/Layout.h
    Include/HashMap.h
    Src/HashMap.cc
    Include/Memory.h
    Include/Concepts.h
    Include/Utils.h
    Include/Utils.h
    Include/Uninit.h
    FFI/Blob.h
    Src/Blob.cc
    FFI/Context.h
    FFI/Binding.h
    FFI/Executor.h
    FFI/Features.h
    FFI/Adapter.h
    Include/ChunkedVector.h
    Include/Ptr.h
    Src/Error.cc
    Include/AllocObjectId.h
    Src/AllocObjectId.cc
    Include/ObjectKey.h
    Include/GpuObject.h
    Include/Option.h
    FFI/Sampler.h
    FFI/Isolate.h
    FFI/Record.h
    Include/Finally.h
)
set_target_properties(${target_name} PROPERTIES LINKER_LANGUAGE CXX)
add_library(Coplt::Graphics::Api ALIAS ${target_name})
target_compile_definitions(${target_name} PRIVATE -DFFI_SRC)
target_link_libraries(${target_name}
    PUBLIC
    cpptrace::cpptrace
    glm::glm
    mimalloc-static
    fmt::fmt
    concurrentqueue
)
